добавил паддинги по бокам у контейнера

--- a/src/sass/base/_null.scss
+++ b/src/sass/base/_null.scss
@@ -30,6 +30,7 @@ ul, li {
 
 .container {
     position: relative;
-    max-width: 950px;
+    max-width: 976px;
+    padding: 0 13px;
     margin: 0 auto;
 }
